# ros_pickle

./: CMakeLists.txt  README.md  package.xml
msg/: Pickle.msg
nodes/: pickle_rec.py  pickle_sender.py
