<?xml version="1.0"?>
<package>
  <name>ros_pickle</name>
  <version>0.0.1</version>
  <description>The ros_pickle package</description>

  <maintainer email="matthew.langford95@gmail.com">Matthew Langford</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>


  <export>
  </export>
</package>
